--- a/index.html
+++ b/index.html
@@ -18,23 +18,22 @@
       <label>Search by name:
         <input type="text" ng-model="namesearch.name">
       </label>
-      <button>Checkout | Bag: Empty</button>
+      <button ng-click="checkout()" ng-show="bag.length === 0">Checkout | Bag: Empty</button>
+      <button ng-click="checkout()" ng-show="bag.length > 0">Checkout | Bag: ({{bag.length}})</button>
       <table>
         <thead>
           <tr>
             <th>Tea</th>
             <th>
-              <div class="tableheaderleft">
-                Information
-              </div>
-              <div class="tableheaderright">
-                <label>Sort by price:
-                  <select ng-model="sorter">
-                    <option value="price">Lowest</option>
-                    <option value="-price">Highest</option>
-                  </select>
-                </label>
-              </div>
+              Information
+            </th>
+              <th>
+              <label>Sort by price:
+                <select ng-model="sorter">
+                  <option value="price">Lowest</option>
+                  <option value="-price">Highest</option>
+                </select>
+              </label>
             </th>
           </tr>
         </thead>
@@ -54,6 +53,23 @@
               <ul ng-repeat="category in tea.categories">
                 <li>{{category}}</li>
               </ul>
+            </td>
+            <td>
+              <form>
+                <select ng-model="quantity">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                  <option value="6">6</option>
+                  <option value="7">7</option>
+                  <option value="8">8</option>
+                  <option value="9">9</option>
+                  <option value="10">10</option>
+                </select>
+                <button ng-click="addToBag(tea)">Add to bag</button>
+              </form>
             </td>
           </tr>
         </tbody>
