--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body ng-controller="MainController" ng-cloak>
-    <header>
-      <p>Welcome to MEAN Tea!</p>
-    </header>
+    <center>
+      <header>
+        <h1>Welcome to MEAN Tea!</h1>
+      </header>
+    </center>
     <main>
       <div ng-view></div>
     </main>
